Started page structure and sourced initial images

--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title></title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <header>
+         <h1>A Trip to Northern Minnesota &amp; Superior National Forest</h1>
+         <h2>A Merchant family getaway</h2>
+      </header>
+      <main>
+         <article>
+            <h3>Split Rock Lighthouse</h3>
+         </article>
+         <article>
+            <h3>Chateau LeVeaux</h3>
+         </article>
+      </main>
+      <footer>
+         <p>&copy; 2023 &mdash; ALEX MERCHANT</p>
+      </footer>
    </body>
 </html>
