Testing autograde approval when using compound selectors for #testP.funParagraph

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          </nav>
       </header>
       <main>
-         <article>
+         <article id="mataafa-storm-section">
             <h3>The Mataafa Storm</h3>
             <p>The Mataafa Storm of 1905 was a powerful storm that struck the Great Lakes on November 27&hyphen;28, 1905. The storm caused widespread damage, including the sinking or stranding of 29 ships and the deaths of 36 sailors. The storm developed in the Great Basin on November 26, and then moved east-northeastward across the Great Lakes on November 28. The storm brought strong winds, heavy snow, and high waves. The winds reached speeds of up to 100 miles per hour, and the waves reached heights of up to 30 feet.</p>
             <p>The storm's most famous victim was the steamer Mataafa, which was carrying a load of iron ore when it was caught in the storm. The Mataafa broke in half and sank off the coast of Duluth, Minnesota. Nine of the Mataafa's crew members were killed.</p>
@@ -36,7 +36,7 @@
                </figcaption>
             </figure>
          </article>
-         <article>
+         <article id="split-rock-construction-section">
             <h3>Split Rock Lighthouse</h3>
             <p>Split Rock Lighthouse is a lighthouse located on the North Shore of Lake Superior in Minnesota. It was built in 1910 in response to the great loss of ships during the Mataafa Storm of 1905. The lighthouse stands on a 133-foot sheer cliff overlooking Great Lake Superior. The lighthouse was designed by lighthouse engineer Ralph Russell Tinkham and was completed in 1910 by the United States Lighthouse Service for $75,000, including the buildings and the land.</p>
             <p>Split Rock Lighthouse was designated a National Historic Landmark in 1964 and is now operated by the Minnesota Historical Society as a museum. The lighthouse is one of the most popular tourist destinations in Minnesota, attracting over 200,000 visitors each year.</p>
@@ -45,7 +45,7 @@
                <figcaption>The octagonal building is a sturdy structure made of steel, brick, and concrete. The steel frame provides strength and stability, the brick walls provide fire resistance, and the concrete trim and foundation protect the building from the elements. The building is set into the rock of the cliff, providing it with a solid foundation and a commanding view of the surrounding area.</figcaption>
             </figure>
          </article>
-         <article>
+         <article id="lighthouse-improvements">
             <h3>How the Lighthouse Evolved Over the Years</h3>
             <p>Split Rock Lighthouse was originally powered by kerosene lamps. The lamps were located in the lantern room at the top of the lighthouse. The lamps were lit every night and were extinguished every morning. The keeper was responsible for keeping the lamps lit and for refilling them with kerosene.</p>
             <p>In 1927, the lighthouse was converted to electric power. The electric power was provided by a hydroelectric plant located on the nearby Beaver River. The electric power was used to power the lighthouse's fog signal, its beacon, and its keeper's quarters.</p>
