Added final styliongs to list items, table, and figures.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head id="#top">
       <title>A Brief History of Split Rock Lighthouse</title>
       <link rel="stylesheet" type="text/css" href="styles.css" /> 
    </head>
@@ -8,7 +8,7 @@
       <!-- Write your HTML in this file! -->
       <header>
          <h1 id="mainHeading">A Brief History of Split Rock Lighthouse</h1>
-         <h2>How an unprecedented storm on Lake Superior lead to emergence of a classic North American lighthouse</h2>
+         <h2 id="subtitle">How an unprecedented storm on Lake Superior lead to emergence of a classic North American lighthouse</h2>
          <nav>
             <ul>
                <li><a href="#mataafa-storm-section">The Mataafa Storm of 1905</a></li>
@@ -65,22 +65,22 @@
                   <tr>
                      <th>Power Source</th>
                      <th>Date Introduced</th>
-                     <th>Notes</th>
+                     <th class="align-left">Notes</th>
                   </tr>
                   <tr>
                      <td>Kerosene Lamps</td>
                      <td>1910</td>
-                     <td>Original power source</td>
+                     <td class="align-left">Original power source</td>
                   </tr>
                   <tr>
                      <td>Electric Power</td>
                      <td>1927</td>
-                     <td>Lighthouse converted to electric power</td>
+                     <td class="align-left">Lighthouse converted to electric power</td>
                   </tr>
                   <tr>
                      <td>Automated</td>
                      <td>1933</td>
-                     <td>Lighthouse became the first on the Great Lakes to be operated without a human keeper</td>
+                     <td class="align-left">Lighthouse became the first on the Great Lakes to be operated without a human keeper</td>
                   </tr>
                </tbody>
             </table>
