--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                <li>The lighthouse's lens comes in at 10 feet tall and weighs 4 tons.</li>
             </ul>
             <p id="testP" class="funParagraph">The automation of Split Rock Lighthouse made it the first lighthouse on the Great Lakes to be operated without a human keeper. The automation process was a major technological advancement that helped to improve the safety of navigation on Lake Superior.</p>
-            <table border="1" align="center">
+            <table >
                <thead>
                   <tr>
                      <th colspan="3">Summary of Different Lighthouse Power Sources</th>
