Added relative paths to image src URLs to work with GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                <li>The storm's winds and waves caused extensive damage to shoreline property, forests, and wildlife.</li>
             </ul>
             <figure>
-               <img class="fig-image" src="/assets/images/ss-mataafa-broken-in-two.webp" alt="The S.S. Mataafa being battered by the waters of Lake Superior during the Mataafa Storm of 1905"/>
+               <img class="fig-image" src="./assets/images/ss-mataafa-broken-in-two.webp" alt="The S.S. Mataafa being battered by the waters of Lake Superior during the Mataafa Storm of 1905"/>
                <figcaption>
                   The SS Mataafa, broken in two and stranded on the South Pier at the entrance of Duluth, met a tragic fate in the November 1905 storm. Of her 24 crew members, 15 were rescued by the Life Savers Station the following morning, but 9 perished in the stern due to the elements.
                </figcaption>
@@ -41,7 +41,7 @@
             <p>Split Rock Lighthouse is a lighthouse located on the North Shore of Lake Superior in Minnesota. It was built in 1910 in response to the great loss of ships during the Mataafa Storm of 1905. The lighthouse stands on a 133-foot sheer cliff overlooking Great Lake Superior. The lighthouse was designed by lighthouse engineer Ralph Russell Tinkham and was completed in 1910 by the United States Lighthouse Service for $75,000, including the buildings and the land.</p>
             <p>Split Rock Lighthouse was designated a National Historic Landmark in 1964 and is now operated by the Minnesota Historical Society as a museum. The lighthouse is one of the most popular tourist destinations in Minnesota, attracting over 200,000 visitors each year.</p>
             <figure>
-               <img src="/assets/images/split-rock-lighthouse.JPG" alt="Slit Rock lighthouse sits atop a cliff overlooking Great Lake Superior"/>
+               <img src="./assets/images/split-rock-lighthouse.JPG" alt="Slit Rock lighthouse sits atop a cliff overlooking Great Lake Superior"/>
                <figcaption>The octagonal building is a sturdy structure made of steel, brick, and concrete. The steel frame provides strength and stability, the brick walls provide fire resistance, and the concrete trim and foundation protect the building from the elements. The building is set into the rock of the cliff, providing it with a solid foundation and a commanding view of the surrounding area.</figcaption>
             </figure>
          </article>
@@ -85,11 +85,11 @@
                </tbody>
             </table>
             <figure>
-               <img src="/assets/images/split-rock-lighthouse-illuminated.jpeg" alt="Split Rock Lighthouse shines its bright beam of light over Lake Superior at night" />
+               <img src="./assets/images/split-rock-lighthouse-illuminated.jpeg" alt="Split Rock Lighthouse shines its bright beam of light over Lake Superior at night" />
                <figcaption>The Split Rock Lighthouse beacon lighting up the evening sky.</figcaption>
             </figure>
             <figure>
-               <img src="/assets/images/fresnel-lens-split-rock-lighthouse.JPG" alt="The third order Fresnel lens that powers Split Rock Lighthouse" />
+               <img src="./assets/images/fresnel-lens-split-rock-lighthouse.JPG" alt="The third order Fresnel lens that powers Split Rock Lighthouse" />
                <figcaption>The lens that powers Split Rock Lighthouse is 10-feet tall and weighs approximately 8,000 pounds</figcaption>
             </figure>
          </article>
